--- a/src/style/countup.scss
+++ b/src/style/countup.scss
@@ -41,3 +41,33 @@
         }
     }
 }
+
+@media (max-width:655px) {
+    .countup {
+        margin: 40px 0;
+        max-width: 100%;
+
+        &__title {
+            padding: 0 20px;
+        }
+
+        &__subtext {
+            padding: 0 20px;
+        }
+
+        .countup-box {
+            flex-direction: column;
+            gap: 0;
+            margin-top: 2.1rem;
+
+            &__item {
+                flex-direction: row-reverse;
+                justify-content: space-between;
+
+                span[class*="timeRef"] {
+                    color: rgb(255, 255, 255)
+                }
+            }
+        }
+    }
+}
